# youtube-to-blog

./: .env  .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
examples/: api_demo.py  blog_demo.py  cli_demo.py  config_demo.py  config_validation_demo.py  error_handling.py  error_logging_demo.py  exception_demo.py  logging_demo.py  process_video.py  service_demo.py  storage_demo.py  test_functionality.py  test_utils_demo.py  transcript_demo.py  utils_demo.py  workflow_demo.py
src/com/brykly/: __init__.py  cli.py
src/com/brykly/config/: config.yaml.example  configuration_manager.py
src/com/brykly/core/: __init__.py  app.py  content_generator.py  output_manager.py  video_processor.py
src/com/brykly/external_integration/: __init__.py  base_adapter.py  openai.py  openrouter.py  yolo_adapter.py  youtube.py
src/com/brykly/output_management/: __init__.py  blog.py  output_manager.py  storage.py  transcript.py
src/com/brykly/templates/: blog_post.html.j2  blog_post.md.j2  blog_post.pdf.j2
src/com/brykly/utils/: __init__.py  config.py  constants.py  exceptions.py  logger.py  logging_config.py
src/com/brykly/workflow/: __init__.py  base.py  blog.py  orchestrator.py  video.py
tests/: conftest.py  test_exceptions.py  test_logging_config.py  test_output_manager.py  test_youtube_service.py
